feat: perform hyperparameter tuning for Naive Bayes

--- a/06-naive-bayes/01-titanic.ipynb
+++ b/06-naive-bayes/01-titanic.ipynb
@@ -23,8 +23,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T09:08:10.231900Z",
-     "start_time": "2025-09-23T09:08:10.216165Z"
+     "end_time": "2025-09-23T10:28:44.502761Z",
+     "start_time": "2025-09-23T10:28:44.486221Z"
     }
    },
    "cell_type": "code",
@@ -33,6 +33,7 @@
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "df = sns.load_dataset('titanic')\n",
     "df.info()"
@@ -68,13 +69,13 @@
      ]
     }
    ],
-   "execution_count": 27
+   "execution_count": 68
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T09:08:10.368165Z",
-     "start_time": "2025-09-23T09:08:10.356796Z"
+     "end_time": "2025-09-23T10:28:44.555192Z",
+     "start_time": "2025-09-23T10:28:44.542416Z"
     }
    },
    "cell_type": "code",
@@ -230,18 +231,18 @@
        "</div>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 28
+   "execution_count": 69
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T09:08:10.426503Z",
-     "start_time": "2025-09-23T09:08:10.418995Z"
+     "end_time": "2025-09-23T10:28:44.620029Z",
+     "start_time": "2025-09-23T10:28:44.611287Z"
     }
    },
    "cell_type": "code",
@@ -269,18 +270,18 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 29
+   "execution_count": 70
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T09:08:10.537974Z",
-     "start_time": "2025-09-23T09:08:10.529416Z"
+     "end_time": "2025-09-23T10:28:44.723190Z",
+     "start_time": "2025-09-23T10:28:44.715499Z"
     }
    },
    "cell_type": "code",
@@ -300,18 +301,18 @@
        "(891, 9)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 30
+   "execution_count": 71
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T09:08:10.690512Z",
-     "start_time": "2025-09-23T09:08:10.684546Z"
+     "end_time": "2025-09-23T10:28:44.886724Z",
+     "start_time": "2025-09-23T10:28:44.881946Z"
     }
    },
    "cell_type": "code",
@@ -324,18 +325,18 @@
        "array(['Southampton', 'Cherbourg', 'Queenstown', nan], dtype=object)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 31
+   "execution_count": 72
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T09:08:10.797114Z",
-     "start_time": "2025-09-23T09:08:10.789960Z"
+     "end_time": "2025-09-23T10:28:44.981340Z",
+     "start_time": "2025-09-23T10:28:44.973248Z"
     }
    },
    "cell_type": "code",
@@ -349,13 +350,13 @@
    ],
    "id": "f604d93b552198c6",
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 73
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T09:08:10.815894Z",
-     "start_time": "2025-09-23T09:08:10.811458Z"
+     "end_time": "2025-09-23T10:28:45.021740Z",
+     "start_time": "2025-09-23T10:28:45.017668Z"
     }
    },
    "cell_type": "code",
@@ -365,43 +366,75 @@
    ],
    "id": "e3e316f08686cdde",
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 74
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T09:08:10.854127Z",
-     "start_time": "2025-09-23T09:08:10.849245Z"
+     "end_time": "2025-09-23T10:28:45.066977Z",
+     "start_time": "2025-09-23T10:28:45.061280Z"
     }
    },
    "cell_type": "code",
    "source": "x_train, x_test, y_train, y_test = train_test_split(data, label, test_size=0.25, random_state=42)",
    "id": "e62fd6fe5964fa53",
    "outputs": [],
-   "execution_count": 34
+   "execution_count": 75
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T09:11:29.773739Z",
-     "start_time": "2025-09-23T09:11:29.765993Z"
+     "end_time": "2025-09-23T10:28:45.237602Z",
+     "start_time": "2025-09-23T10:28:45.084238Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "gnb = GaussianNB()\n",
+    "# in this set of operations we are trying to find out which value for `var_smoothing` yields\n",
+    "# the best answer using grid search\n",
+    "param_grid = {'var_smoothing': [1e-9, 1e-8, 1e-7, 1e-6, 1e-5, 1e-4, 1e-3, 1e-2, 1e-1]}\n",
+    "gnb_grid = GaussianNB()\n",
+    "clf = GridSearchCV(gnb_grid, param_grid, cv=5)\n",
+    "clf.fit(x_train, y_train)\n",
+    "clf.best_params_"
+   ],
+   "id": "c73b1a0295d374ca",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'var_smoothing': 1e-05}"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 76
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-23T10:28:45.327338Z",
+     "start_time": "2025-09-23T10:28:45.317526Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "gnb = GaussianNB(var_smoothing=1e-5)\n",
     "gnb.fit(x_train, y_train)\n",
     "gnb_score = gnb.score(x_test, y_test)"
    ],
    "id": "7782781da632f3cc",
    "outputs": [],
-   "execution_count": 36
+   "execution_count": 77
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T09:13:09.860173Z",
-     "start_time": "2025-09-23T09:13:09.808117Z"
+     "end_time": "2025-09-23T10:28:45.414035Z",
+     "start_time": "2025-09-23T10:28:45.351329Z"
     }
    },
    "cell_type": "code",
@@ -413,13 +446,13 @@
    ],
    "id": "f0fd2a46bf1ec2ec",
    "outputs": [],
-   "execution_count": 40
+   "execution_count": 78
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T09:14:31.070011Z",
-     "start_time": "2025-09-23T09:14:31.007449Z"
+     "end_time": "2025-09-23T10:28:45.448559Z",
+     "start_time": "2025-09-23T10:28:45.435271Z"
     }
    },
    "cell_type": "code",
@@ -431,13 +464,13 @@
    ],
    "id": "e6791fcf8ea26f82",
    "outputs": [],
-   "execution_count": 41
+   "execution_count": 79
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T09:15:07.893379Z",
-     "start_time": "2025-09-23T09:15:07.890687Z"
+     "end_time": "2025-09-23T10:28:45.476631Z",
+     "start_time": "2025-09-23T10:28:45.470105Z"
     }
    },
    "cell_type": "code",
@@ -448,21 +481,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gaussian Naive Bayes Accuracy: 0.7847533632286996 \n",
+      "Gaussian Naive Bayes Accuracy: 0.7937219730941704 \n",
       "Logistic Regression Accuracy: 0.7982062780269058 \n",
       "KNN Accuracy: 0.7040358744394619\n"
      ]
     }
    ],
-   "execution_count": 42
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "57517e7f5bc149b3"
+   "execution_count": 80
   }
  ],
  "metadata": {
