--- a/02-feature-engineering-and-visualizations/03-world-population.ipynb
+++ b/02-feature-engineering-and-visualizations/03-world-population.ipynb
@@ -11,7 +11,6 @@
     }
    },
    "source": [
-    "import pandas\n",
     "import plotly.express as px\n",
     "import pandas as pd"
    ],
@@ -1327,7 +1326,7 @@
     "    x=\"Country/Territory\",\n",
     "    y=\"2022 Population\",\n",
     "    size=\"2022 Population\",\n",
-    "    color=\"Continent\", # This causes the plotly to categorize the data by Continent whcih we don't want\n",
+    "    color=\"Continent\", # This causes the plotly to categorize the data by Continent which we don't want\n",
     ")\n",
     "\n",
     "fig.update_xaxes(categoryorder=\"array\", categoryarray=sorted_df['Country/Territory'])\n",
